# UniProjects_

./: README.md
Assembly project/: Makefile
Assembly project/Ordini/: Both.txt  EDF.txt  None.txt
Assembly project/src/: EDF.s  HPF.s  convertitore.s  lettura.s  pianificatore.s  stampa.s
Operative Systems project/sha256-linux-macos/: CMakeLists.txt
Operative Systems project/sha256-linux-macos/src/: sha256_file.c  sha256_string.c
Operative Systems project/so/: Compiling&Execution  client  client.c  common.h  server  server.c  test.txt
